# bluepencil

./: LICENSE  Makefile  README.md  bluepencil.cabal  html.js  index.js  package.json  package.yaml  stack.yaml
src/: BluePencil.hs
tests/: Main.hs
